// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@nx/vite/plugin Library mode should exclude serve and preview targets when vite.config.ts is in library mode 1`] = `
[
  [
    "my-lib/vite.config.ts",
    {
      "projects": {
        "my-lib": {
          "metadata": {},
          "projectType": "library",
          "root": "my-lib",
          "targets": {
            "build": {
              "cache": true,
              "command": "vite build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "vite",
                  ],
                },
              ],
              "metadata": {
                "description": "Run Vite build",
                "help": {
                  "command": "npx vite build --help",
                  "example": {
                    "options": {
                      "manifest": "manifest.json",
                      "sourcemap": true,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-lib",
              },
              "outputs": [
                "{workspaceRoot}/dist/{projectRoot}",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "watch-deps": {
              "command": "npx nx watch --projects my-lib --includeDependentProjects -- npx nx build-deps my-lib",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/vite/plugin not root project should create nodes 1`] = `
[
  [
    "my-app/vite.config.ts",
    {
      "projects": {
        "my-app": {
          "metadata": {},
          "projectType": "application",
          "root": "my-app",
          "targets": {
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "build-something": {
              "cache": true,
              "command": "vite build",
              "dependsOn": [
                "^build-something",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "vite",
                  ],
                },
              ],
              "metadata": {
                "description": "Run Vite build",
                "help": {
                  "command": "npx vite build --help",
                  "example": {
                    "options": {
                      "manifest": "manifest.json",
                      "sourcemap": true,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
              "outputs": [
                "{workspaceRoot}/dist/{projectRoot}",
              ],
            },
            "dev": {
              "command": "vite",
              "continuous": true,
              "metadata": {
                "description": "Starts Vite dev server",
                "help": {
                  "command": "npx vite --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "my-serve": {
              "command": "vite",
              "continuous": true,
              "metadata": {
                "deprecated": "Use devTargetName instead. This option will be removed in Nx 22.",
                "description": "Starts Vite dev server",
                "help": {
                  "command": "npx vite --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "preview-site": {
              "command": "vite preview",
              "continuous": true,
              "dependsOn": [
                "build-something",
              ],
              "metadata": {
                "description": "Locally preview Vite production build",
                "help": {
                  "command": "npx vite preview --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "serve-static": {
              "continuous": true,
              "executor": "@nx/web:file-server",
              "options": {
                "buildTarget": "build-something",
                "spa": true,
              },
            },
            "watch-deps": {
              "command": "npx nx watch --projects my-app --includeDependentProjects -- npx nx build-deps my-app",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/vite/plugin root project should create nodes 1`] = `
[
  [
    "vite.config.ts",
    {
      "projects": {
        ".": {
          "metadata": {},
          "projectType": "application",
          "root": ".",
          "targets": {
            "build": {
              "cache": true,
              "command": "vite build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "vite",
                  ],
                },
              ],
              "metadata": {
                "description": "Run Vite build",
                "help": {
                  "command": "npx vite build --help",
                  "example": {
                    "options": {
                      "manifest": "manifest.json",
                      "sourcemap": true,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{projectRoot}/dist",
              ],
            },
            "dev": {
              "command": "vite",
              "continuous": true,
              "metadata": {
                "description": "Starts Vite dev server",
                "help": {
                  "command": "npx vite --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
            "preview": {
              "command": "vite preview",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "metadata": {
                "description": "Locally preview Vite production build",
                "help": {
                  "command": "npx vite preview --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
            "serve": {
              "command": "vite",
              "continuous": true,
              "metadata": {
                "deprecated": "Use devTargetName instead. This option will be removed in Nx 22.",
                "description": "Starts Vite dev server",
                "help": {
                  "command": "npx vite --help",
                  "example": {
                    "options": {
                      "port": 3000,
                    },
                  },
                },
                "technologies": [
                  "vite",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
            "serve-static": {
              "continuous": true,
              "executor": "@nx/web:file-server",
              "options": {
                "buildTarget": "build",
                "spa": true,
              },
            },
          },
        },
      },
    },
  ],
]
`;
